Removed permsize argument (removed in Java8)